# DM_MC02_template

./: CMakeLists.txt  app.overlay  prj.conf  prompt.md
Docs/: 引脚分配表.md
boards/damiao/dm_mc02/: Kconfig.defconfig  Kconfig.dm_mc02  board.cmake  board.yml  dm_mc02.dts  dm_mc02.yaml  dm_mc02_defconfig
boards/damiao/dm_mc02/support/: openocd.cfg
include/board_package/unit_tests/: unit_tests.h
include/drivers/imu_heater/: imu_heater.h
src/: main.c
src/board_package/unit_tests/: UNIT_TESTS.md  bmi088_test.c  can_loopback_test.c  imu_temperature_test.c  pwm_test.c  uart_test.c
src/drivers/imu_heater/: imu_heater.c
